--- a/themes/autophugo/layouts/partials/footer.html
+++ b/themes/autophugo/layouts/partials/footer.html
@@ -12,6 +12,7 @@
                     {{ range .Site.Params.footer.social.links }}
                         <li><a href="{{ .url }}" class="icon {{ .icon }}"><span class="label">{{ .label }}</span></a></li>
                     {{ end }}
+                    <li><a href="tel:+420776867151" class="icon fa-phone"><span class="label">Telefon</span></a></li>
                     </ul>
                 </section>
                 <p class="copyright">
